2005/11/18	kaffeetisch

	* GType.xs Register the fundamentals for gint64 and guint64 as
	Glib::Int64 and Glib::UInt64 respectively.

2005/11/14	kaffeetisch

	* Glib.pm, NEWS, README: Unstable release 1.111.

2005/11/13	muppetman

	* GValue.xs, GObject.xs:  The GObject property interface passes around
	pointers to boxed objects, but does not transfer ownership of them.
	Thus, the old code was letting perl hold on to dead pointers.  We
	basically need to be able to specify whether to copy boxed objects
	when converting from GValue to SV.  Since gperl_sv_from_value() is
	public and API frozen, add a new private function,
	_gperl_sv_from_value_internal(), and call this from both
	gperl_sv_from_value() and Glib::Object::get().  Fixes
	http://bugzilla.gnome.org/show_bug.cgi?id=319204 and several other
	hard-to-diagnose intermittent bugs.

2005/11/12	kaffeetisch

	* xsapi.pod.head: Fix a few typos.

2005/10/18	kaffeetisch

	* Glib.pm, MANIFEST, MANIFEST.SKIP, Makefile.PL, NEWS, README:
	Unstable release 1.110.

2005/10/17	kaffeetisch

	* GParamSpec.xs, GType.xs, GValue.xs, gperl.h, typemap, t/64bit.t:
	Use custom converters for gint64 and guint64 that transform 64 bit
	integers to and from strings if perl's IV type isn't big enough.

	* AUTHORS, Glib.pm: Add some documentation about the above;
	include a write up by A. Pagaltzis about the various big integer
	modules for Perl.

	* GSignal.xs (newSVGSignalQuery)
	(gperl_signal_emission_hook): Fix some signedness warnings.

	* GParamSpec.xs (gperl_param_spec_type_from_package): Fix a
	variable-data-in-struct-construction warning.

2005/10/15	kaffeetisch

	* GObject.xs (gperl_register_object): Free the interfaces list
	after use.

2005/10/14	muppetman

	* GObject.xs, AUTHORS: Patch from Steven Walter fixes nasty reference
	counting bug that could leave Perl wrappers pointing at dead C objects
	in some situations.  Because we have no C containers in glib-object, we
	can't really add tests for this.

2005/10/05	kaffeetisch
