@@ -4,7 +4,7 @@
 use strict;
 use warnings;
 use Glib ':constants';
-use Test::More tests => 23;
+use Test::More tests => 26;
 
 my $str = <<__EOK__
 #top of the file
@@ -30,7 +30,7 @@ __EOK__
 ;
 
 SKIP: {
-	skip "Glib::KeyFile is new in glib 2.6.0", 23
+	skip "Glib::KeyFile is new in glib 2.6.0", 26
 		unless Glib->CHECK_VERSION (2, 6, 0);
 
 	ok (defined Glib::KeyFile->new ());
@@ -50,7 +50,7 @@ SKIP: {
 	@groups = $key_file->get_groups;
 	is (@groups, 3, 'now we have two groups');
 
-	is ($key_file->get_comment, "top of the file\n", 'we reached the top');
+	is ($key_file->get_comment(undef, undef), "top of the file\n", 'we reached the top');
 
 	my $start_group = 'mysection';
 	ok ($key_file->has_group($start_group));
@@ -89,18 +89,25 @@ SKIP: {
 	$key_file->set_string_list('listsection', 'stringlist', 'one', 'two', 'three');
 	$key_file->set_locale_string('locales', 'mystring', 'en', 'one');
 	$key_file->set_comment('locales', 'mystring', 'comment');
+	is ($key_file->get_comment('locales', 'mystring'), "comment\n");
+	$key_file->set_comment('locales', undef, "another comment\n");
+	is ($key_file->get_comment('locales', undef), "#another comment\n#");
+	$key_file->set_comment(undef, undef, 'one comment more');
+	is ($key_file->get_comment(undef, undef), "one comment more\n");
 	$key_file->set_boolean($start_group, 'boolkey', FALSE);
 	$key_file->set_value($start_group, 'boolkey', '0');
 
 	is_deeply([$key_file->get_keys('mysection')], ['intkey', 'stringkey', 'boolkey']);
 
 	$key_file->remove_comment('locales', 'mystring');
+	$key_file->remove_comment('locales', undef);
+	$key_file->remove_comment(undef, undef);
 	$key_file->remove_key('locales', 'mystring');
 	$key_file->remove_group('mysection');
 	$key_file->remove_group('listsection');
 	$key_file->remove_group('locales');
 
-	is($key_file->to_data(), "#top of the file\n\n");
+	is($key_file->to_data(), "");
 
 	$key_file->set_list_separator(ord(':'));
 }
